fix blurry -50% transform by rounding the matrix

--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,8 @@ footer.visible {
 
 .floating-action-button {
   --fab-size: 48px;
+  --translateX: -50%;
+  --translateY: -50%;
 
   position: absolute;
   top: 0;
@@ -382,7 +384,7 @@ footer.visible {
   text-transform: uppercase;
   cursor: pointer;
   background-color: var(--color-accent);
-  transform: scale(0) translate3d(-50%, -50%, 0);
+  transform: scale(0) translate3d(var(--translateX, -50%), var(--translateY, -50%), 0);
   transform-origin: 0 0;
   opacity: 0;
   transition: box-shadow var(--fab-transition-duration) var(--timing-function),
@@ -396,7 +398,7 @@ footer.visible {
 }
 
 .floating-action-button.visible {
-  transform: scale(1) translate3d(-50%, -50%, 0);
+  transform: scale(1) translate3d(var(--translateX, -50%), var(--translateY, -50%), 0);
   opacity: 1;
 }
 
